[gd_scene load_steps=3 format=3 uid="uid://d0tgdksvfqvbg"]

[ext_resource type="Script" path="res://ver_1/character/hero/Trebbie/trebbie_buff.gd" id="1_lcige"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1swjl"]
radius = 213.038

[node name="TrebbieBuff" type="Node2D"]
script = ExtResource("1_lcige")
initial_cd = 4
initial_dur = 0.5
initial_hsg = 3.0
dmg_multiplier = 2.0
status_duration = 4.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_1swjl")
debug_color = Color(0.680201, 0.300926, 0.99701, 0.42)

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
